--- a/Kaira.css
+++ b/Kaira.css
@@ -474,7 +474,7 @@ text-align: center;
     padding: 80px ;
     text-align: center;
     margin: 50px auto;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgb(215, 215, 214);
